tests/baselines/reference/parserMemberFunctionDeclaration1.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration1.ts(2,12): error TS1028: Accessibility modifier already seen.


==== tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration1.ts (1 errors) ====
    class C {
        public public Foo() { }
               ~~~~~~
!!! error TS1028: Accessibility modifier already seen.
    }